// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exact capacity and trigger output at 40 columns 1`] = `
"Current session
⛁⛁⛁⛁⛀⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
fake/test
~44.5k / 1M (4.5%)
⛁ Used 44.5k (4.5%)
⛶ Free 955.5k (95.5%)
Session: S1 | Enabled | Cost: $0.0000
Project: example
Pending / trigger (~tokens)
Noting        ██████████ 120.0% 12k/10k
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      █░░░░░░░░░  10.0% 500/5k
Off | Runs | Project | Mark"
`;

exports[`exact capacity and trigger output at 100 columns 1`] = `
"Current session
⛁ ⛁ ⛁ ⛁ ⛀ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   fake/test
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Used 44.5k (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛶ Free 955.5k (95.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶
Session: S1 | Enabled | Cost: $0.0000
Project: example
Pending / trigger (~tokens)
Noting        ██████████ 120.0% 12k/10k
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      █░░░░░░░░░  10.0% 500/5k
Off | Runs | Project | Mark"
`;
